Feat(global): Change title, meta description and icons for the logo

--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>WorldArlenor</title>
+  <title>The World of Arlenor</title>
+  <meta name="description" content="The World of Arlenor">
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <meta property="og:title" content="Title">
+  <meta property="og:description" content="Description">
+  <meta property="og:image" content="Image source">
+  <meta property="og:url" content="URL">
+  <meta name="twitter:card" content="summary_large_image">
 </head>
 <body>
   <app-root></app-root>
