Refractor : Many fixes about the header, the home and the footer with the new logo

--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>The World of Arlenor</title>
-  <meta name="description" content="The World of Arlenor">
+  <title>Le Monde d'Arlénor</title>
+  <meta name="description" content="Le Monde d'Arlénor">
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
