Feat : Add metas but need to be tested

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 
   <meta property="og:title" content="Title">
   <meta property="og:description" content="Description">
-  <meta property="og:image" content="Image source">
+  <meta property="og:image" content="./assets/images/big_logo.png">
   <meta property="og:url" content="URL">
   <meta name="twitter:card" content="summary_large_image">
 </head>
