--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,9 @@
 	<meta property="og:description" content="Univers, créé principalement pour le jeu de rôles, mais où sont racontées les histoires de..."/>
 	<meta property="og:site_name" content="Le Monde d'Arlénor"/>
 	<meta property="og:locale" content="fr_FR"/>
+
+	<script src="./assets/unity/TemplateData/UnityProgress.js"></script>
+	<script src="./assets/unity/Build/UnityLoader.js"></script>
 </head>
 <body>
   <app-root></app-root>
