Refactor(global): Update text for the index

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Le Monde d'Arlénor</title>
-  <meta name="description" content="Univers, créé principalement pour le jeu de rôles, mais où sont racontées les histoires de...">
+  <meta name="description" content="Dans un univers où la magie est omniprésente, où la discrimination entre les peuples va jusqu'à la mort, et où la religion s'installe dans toutes les cités... une menace pèse secrètement sur le monde...">
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,14 +12,14 @@
 
 	<!-- Schema.org meta for Google+ -->
 	<meta itemprop="name" content="Le Monde d'Arlénor"/>
-	<meta itemprop="description" content="Univers, créé principalement pour le jeu de rôles, mais où sont racontées les histoires de..."/>
+	<meta itemprop="description" content="Dans un univers où la magie est omniprésente, où la discrimination entre les peuples va jusqu'à la mort, et où la religion s'installe dans toutes les cités... une menace pèse secrètement sur le monde..."/>
 	<meta itemprop="image" content="http://arlenor.com/assets/images/facebook_logo.jpg"/>
 
 	<!-- Twitter Card meta -->
 	<meta name="twitter:card" content="summary"/>
 	<meta name="twitter:site" content="@spefire"/>
 	<meta name="twitter:title" content="Le Monde d'Arlénor"/>
-	<meta name="twitter:description" content="Univers, créé principalement pour le jeu de rôles, mais où sont racontées les histoires de..."/>
+	<meta name="twitter:description" content="Dans un univers où la magie est omniprésente, où la discrimination entre les peuples va jusqu'à la mort, et où la religion s'installe dans toutes les cités... une menace pèse secrètement sur le monde..."/>
 	<meta name="twitter:url" content="http://arlenor.com/"/>
 	<meta name="twitter:domain" content="http://arlenor.com/"/>
 
@@ -31,7 +31,7 @@
 	<meta property="og:type" content="website"/>
 	<meta property="og:url" content="http://arlenor.com/"/>
 	<meta property="og:image" content="http://arlenor.com/assets/images/facebook_logo.jpg"/>
-	<meta property="og:description" content="Univers, créé principalement pour le jeu de rôles, mais où sont racontées les histoires de..."/>
+	<meta property="og:description" content="Dans un univers où la magie est omniprésente, où la discrimination entre les peuples va jusqu'à la mort, et où la religion s'installe dans toutes les cités... une menace pèse secrètement sur le monde..."/>
 	<meta property="og:site_name" content="Le Monde d'Arlénor"/>
 	<meta property="og:locale" content="fr_FR"/>
 </head>
